<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.analyst.MoreAnalystFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/specifics_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/specific_prompt"
                android:padding="@dimen/dimen_8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/specifics"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/job_type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_type_prompt"
                android:padding="@dimen/dimen_8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/job_type"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/countries_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/countries"
                android:padding="@dimen/dimen_8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/interested_countries"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work_remotely_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_remotely"
                android:padding="@dimen/dimen_8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/work_remotely_indicator"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>