<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddMoreDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/specific_prompt"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/area_of_specifics_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:entries="@array/area_of_specifics_spinner"
            android:padding="@dimen/dimen_8dp"
            android:popupBackground="@color/colorPrimary"
            android:textAlignment="center" />


        <Switch
            android:id="@+id/work_remotely_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/work_remotely"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/job_type_prompt"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/job_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:entries="@array/available_job_types"
            android:padding="@dimen/dimen_8dp"
            android:popupBackground="@color/colorPrimary"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/countries_prompt"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/countries_to_work_in_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:entries="@array/available_job_types"
            android:padding="@dimen/dimen_8dp"
            android:popupBackground="@color/colorPrimary"
            android:textAlignment="center" />

        <Button
            android:id="@+id/save_more_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>


</ScrollView>