<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SetupAccountInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/person_icon"
                android:padding="16dp"
                android:src="@drawable/ic_person_white_32dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTransWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/full_name_hint"
                    android:inputType="textPersonName"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/phone_icon"
                android:padding="16dp"
                android:src="@drawable/ic_phone_phone_32dp" />

            <LinearLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ccp_showFullName="true"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="false" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTransWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/contact_hint"
                        android:inputType="phone"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location_icon"
                android:padding="16dp"
                android:src="@drawable/ic_location_on_white_32dp" />

            <LinearLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTransWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/street_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/street_hint"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTransWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/po_box_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/po_box_hint"
                        android:inputType="textPostalAddress"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTransWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/city_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/city_hint"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTransWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/state_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/state_hint"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTransWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/zipcode_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/zipcode_hint"
                        android:inputType="number"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:textColor="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/country_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginBottom="@dimen/dimen_4dp"
                    android:backgroundTint="@android:color/white"
                    android:inputType="text"
                    android:padding="@dimen/dimen_8dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/person_icon"
                android:padding="16dp"
                android:src="@drawable/ic_public_white_32dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTransWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/website_hint"
                    android:inputType="textWebEmailAddress"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/goto_add_more_details_btn"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/add_preferences"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_primary"
            android:onClick="gotoAddMoreDetailsActivty"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>